Fixed overflow in headers

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1273,13 +1273,13 @@ footer {
         h1 {
           text-align: center;
           &:nth-child(1) {
-            font-size: 90px;
+            font-size: 80px;
           }
           &:nth-child(2) {
-            font-size: 86px;
+            font-size: 70px;
           }
           &:nth-child(3) {
-            font-size: 80px;
+            font-size: 70px;
           }
         }
       }
@@ -1374,6 +1374,7 @@ footer {
   .page-header {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     margin-top: 0px;
     .header-container {
       .container-img {
@@ -1382,7 +1383,6 @@ footer {
         margin-left: 10px;
       }
       .contact-header-img {
-        width: 160px;
         margin-top: 400px;
       }
     }
@@ -1419,14 +1419,16 @@ footer {
       padding-top: 100px;
       h1 {
         &:nth-child(1) {
-          font-size: 70px;
+          font-size: 62px;
           color: #008000;
         }
         &:nth-child(2) {
           color: white;
+          stroke-width: 2;
+          stroke: #008000;
           -webkit-text-stroke-width: 2px;
           -webkit-text-stroke-color: #008000;
-          font-size: 70px
+          font-size: 62px
         }
       }
     }
